changed index.html and style.css (changed block collaborations and styles for his subblock collaborations__container)

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     </section>
     <!-- Блок о коллаборациях -->
     <section class='collaborations'>
-        <section class='collaborations__container'>
+        <section class='section-block collaborations__container'>
             <h2>Наши коллаборации</h2>
             <p>С нами уже самые топовые инфлюенсеры. </p>
         </section>
