changed structure of folder assets/images (created subfolders for every block with image)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <main>
     <section class='header__center'>
-        <img src="assets/images/bg.png" alt="Фоновое изображение" class="header__center-bg">
+        <img src="assets/images/section_header__center/bg.png" alt="Фоновое изображение" class="header__center-bg">
         <div class="header__center-title">Сделано в Санкт-Петербурге</div>
         <button type="button" class="button">Отправить запрос</button>
     </section>
@@ -43,42 +43,42 @@
     </section>    
     <section class='products'>
         <div class='product'>
-            <img src='assets/images/hudi.png' alt='Худи'>
+            <img src='assets/images/section_products/hudi.png' alt='Худи'>
             <div class="product__info">
                 <span class="product__title">Худи</span>
                 <span class="product__price">от 1650 ₽</span>
             </div>
         </div>
         <div class='product'>
-            <img src='assets/images/futbolki.png' alt='Футболки'>
+            <img src='assets/images/section_products/futbolki.png' alt='Футболки'>
             <div class="product__info">
                 <span class="product__title">Футболки</span>
                 <span class="product__price">от 510 ₽</span>
             </div>
         </div>
         <div class='product'>
-            <img src='assets/images/sweetshot.png' alt='Свитшоты'>
+            <img src='assets/images/section_products/sweetshot.png' alt='Свитшоты'>
             <div class="product__info">
                 <span class="product__title">Свитшоты</span>
                 <span class="product__price">от 890 ₽</span>
             </div>
         </div>
         <div class='product'>
-            <img src='assets/images/shtany.png' alt='Штаны'>
+            <img src='assets/images/section_products/shtany.png' alt='Штаны'>
             <div class="product__info">
                 <span class="product__title">Штаны</span>
                 <span class="product__price">от 1230 ₽</span>
             </div>
         </div>
         <div class='product'>
-            <img src='assets/images/shopery.png' alt='Шопперы'>
+            <img src='assets/images/section_products/shopery.png' alt='Шопперы'>
             <div class="product__info">
                 <span class="product__title">Шопперы</span>
                 <span class="product__price">от 330 ₽</span>
             </div>
         </div>
         <div class='product'>
-            <img src='assets/images/kepki.png' alt='Кепки'>
+            <img src='assets/images/section_products/kepki.png' alt='Кепки'>
             <div class="product__info">
                 <span class="product__title">Кепки</span>
                 <span class="product__price">от 400 ₽</span>
@@ -88,7 +88,7 @@
     <!-- Блок с видео-->
     <section class='video'>
         <p class='video__description'>Презентация нашей коллекции одежды 2021</p>
-        <img src="assets/images/presentation-anonce.png" alt="Video thumbnail" class="video__background">
+        <img src="assets/images/section_video/presentation-anonce.png" alt="Video thumbnail" class="video__background">
 
         <div class="video__overlay">
             <button type="button" class="video__play-button"></button>
@@ -103,17 +103,17 @@
         </section>
         <section class='cooperations'>
             <div class='cooperations__cart'>
-                <img src='assets/images/patternmaking-los-angeles 1.png' alt='Разработка лекал и дизайна'>
+                <img src='assets/images/section_cooperations/patternmaking-los-angeles 1.png' alt='Разработка лекал и дизайна'>
                 <h3>Разработка лекал и дизайна</h3>
                 <p>Поможем создать уникальные лекала для вашей одежды или адаптировать уже имеющиеся. Разработаем индивидуальный дизайн ваших товаров</p>
             </div>
             <div class='cooperations__cart'>
-                <img src='assets/images/cut-and-sew-sample-making 1.png' alt='Пошив одежды на заказ'>
+                <img src='assets/images/section_cooperations/cut-and-sew-sample-making 1.png' alt='Пошив одежды на заказ'>
                 <h3>Пошив одежды на заказ</h3>
                 <p>Пошив трикотажных изделий любой сложности и в любых объемах, как по вашим образцам, так и по нашим базовым лекалам</p>
             </div>
             <div class='cooperations__cart'>
-                <img src='assets/images/sustainable-clothing-sample-production 1.png' alt='Бренд одежды под ключ'>
+                <img src='assets/images/section_cooperations/sustainable-clothing-sample-production 1.png' alt='Бренд одежды под ключ'>
                 <h3>Бренд одежды под ключ</h3>
                 <p>Поможем разработать линейку одежды для вашего бренда, от пошива до реализации.</p>
             </div>
@@ -126,12 +126,12 @@
         </section>
         <section class='prints-techniques__content'>
             <div class='prints-techniques__content-cart'>
-                <img src='assets/images/Screen-Printing-Adamley-Textiles 1.png' alt='Шелкография'>
+                <img src='assets/images/section_prints-techniques/Screen-Printing-Adamley-Textiles 1.png' alt='Шелкография'>
                 <h3>Шелкография</h3>
                 <p>Трафаретная печать подходит для нанесения почти на любых изделиях: футболках, толстовках, свитшотах и т.д. Принты, сделанные данным способом имеют высокую износостойкость, не требуют особого ухода и прослужат довольно долго.</p>
             </div>
             <div class='prints-techniques__content-cart'>
-                <img src='assets/images/embroidery-machine-fox-detail 1.png' alt='Вышивка на одежде'>
+                <img src='assets/images/section_prints-techniques/embroidery-machine-fox-detail 1.png' alt='Вышивка на одежде'>
                 <h3>Вышивка на одежде</h3>
                 <p>Один из самых интересных способов нанесения изображения на одежду. Вышивка долговечна, без проблем переносит механические воздействия. Данный вид нанесения выглядит наиболее эффектно и прослужит дольше всего.</p>
             </div>
@@ -150,19 +150,19 @@
         <p class="scheme-of-work__description">К каждому проекту мы подходим индивидуально. Свяжитесь с нами и мы поможем реализовать ваши идеи.</p>
         <section class="steps">
             <div class="step">
-                <img class="step__icon" src="assets/images/step_1.svg" alt="Отправляете заявку" >
+                <img class="step__icon" src="assets/images/section_scheme-of-work__container/step_1.svg" alt="Отправляете заявку" >
                 <p class="step__text">Отправляете заявку или звоните +7 (911) 109-97-07</p>
             </div>
             <div class="step">
-                <img class="step__icon" src="assets/images/step_2.svg" alt="Разрабатываем лекала" >
+                <img class="step__icon" src="assets/images/section_scheme-of-work__container/step_2.svg" alt="Разрабатываем лекала" >
                 <p class="step__text">Разрабатываем лекала и шьём образец</p>
             </div>
             <div class="step">
-                <img class="step__icon" src="assets/images/step_3.svg" alt="Наносим принт" >
+                <img class="step__icon" src="assets/images/section_scheme-of-work__container/step_3.svg" alt="Наносим принт" >
                 <p class="step__text">Шьём тираж и наносим принт или вышивку</p>
             </div>
             <div class="step">
-                <img class="step__icon" src="assets/images/step_4.svg" alt="Упаковываем" >
+                <img class="step__icon" src="assets/images/section_scheme-of-work__container/step_4.svg" alt="Упаковываем" >
                 <p class="step__text">Упаковываем и отгружаем партию</p>
             </div>
         </section>
@@ -175,22 +175,22 @@
         </section>
         <section class='actual-manufacturing__content'>
             <div class='actual-manufacturing__content-cart'>
-                <img src='assets/images/IMG_9324.png' alt=''>
+                <img src='assets/images/section_actual-manufacturing/IMG_9324.png' alt=''>
             </div>
             <div class='actual-manufacturing__content-cart'>
-                <img src='assets/images/IMG_9381.png' alt=''>
+                <img src='assets/images/section_actual-manufacturing/IMG_9381.png' alt=''>
             </div>
             <div class='actual-manufacturing__content-cart'>
-                <img src='assets/images/IMG_9394.png' alt=''>
+                <img src='assets/images/section_actual-manufacturing/IMG_9394.png' alt=''>
             </div>
             <div class='actual-manufacturing__content-cart'>
-                <img src='assets/images/IMG_9344.png' alt=''>
+                <img src='assets/images/section_actual-manufacturing/IMG_9344.png' alt=''>
             </div>
             <div class='actual-manufacturing__content-cart'>
-                <img src='assets/images/IMG_94281.png' alt=''>
+                <img src='assets/images/section_actual-manufacturing/IMG_94281.png' alt=''>
             </div>
             <div class='actual-manufacturing__content-cart'>
-                <img src='assets/images/IMG_93812.png' alt=''>
+                <img src='assets/images/section_actual-manufacturing/IMG_93812.png' alt=''>
             </div>
         </section>
     </section>
@@ -202,11 +202,11 @@
         </section>
         <section class="shops__locations">
             <div class="shop-location">
-                <img src="assets/images/shop_spb.png" alt="Магазин в Санкт-Петербурге">
+                <img src="assets/images/section_shops/shop_spb.png" alt="Магазин в Санкт-Петербурге">
                 <p>Санкт-Петербург <br> Лиговский проспект 64</p>
             </div>
             <div class="shop-location">
-                <img src="assets/images/shop_msk.png" alt="Магазин в Москве">
+                <img src="assets/images/section_shops/shop_msk.png" alt="Магазин в Москве">
                 <p>Москва <br> Петровский бульвар 9</p>
             </div>
         </section>
@@ -219,31 +219,31 @@
         </section>
         <section class='collaborations__grid'>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/1416065832_6.png' alt='Коллаборация 1'>
+                <img src='assets/images/section_collaborations/1416065832_6.png' alt='Коллаборация 1'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/1416065832_5.png' alt='Коллаборация 2'>
+                <img src='assets/images/section_collaborations/1416065832_5.png' alt='Коллаборация 2'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/Group_10.png' alt='Коллаборация 3'>
+                <img src='assets/images/section_collaborations/Group_10.png' alt='Коллаборация 3'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/IMG_9232_Ed1it_2.png' alt='Коллаборация 4'>
+                <img src='assets/images/section_collaborations/IMG_9232_Ed1it_2.png' alt='Коллаборация 4'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/IMG_1067_1.png' alt='Коллаборация 5'>
+                <img src='assets/images/section_collaborations/IMG_1067_1.png' alt='Коллаборация 5'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/IMG_9170_1.png' alt='Коллаборация 6'>
+                <img src='assets/images/section_collaborations/IMG_9170_1.png' alt='Коллаборация 6'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/football_4_1.png' alt='Коллаборация 7'>
+                <img src='assets/images/section_collaborations/football_4_1.png' alt='Коллаборация 7'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/image_17.png' alt='Коллаборация 8'>
+                <img src='assets/images/section_collaborations/image_17.png' alt='Коллаборация 8'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/danick_10_1.png' alt='Коллаборация 9'>
+                <img src='assets/images/section_collaborations/danick_10_1.png' alt='Коллаборация 9'>
             </div>
         </section>
     </section>
