changed structure of folder assets/images (created subfolders for every block with image with adequate names)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <main>
     <section class='header__center'>
-        <img src="assets/images/section_header__center/bg.png" alt="Фоновое изображение" class="header__center-bg">
+        <img src="assets/images/section_header__center/background_image.png" alt="Фоновое изображение" class="header__center-bg">
         <div class="header__center-title">Сделано в Санкт-Петербурге</div>
         <button type="button" class="button">Отправить запрос</button>
     </section>
@@ -103,17 +103,17 @@
         </section>
         <section class='cooperations'>
             <div class='cooperations__cart'>
-                <img src='assets/images/section_cooperations/patternmaking-los-angeles 1.png' alt='Разработка лекал и дизайна'>
+                <img src='assets/images/section_cooperations/pattern_development.png' alt='Разработка лекал и дизайна'>
                 <h3>Разработка лекал и дизайна</h3>
                 <p>Поможем создать уникальные лекала для вашей одежды или адаптировать уже имеющиеся. Разработаем индивидуальный дизайн ваших товаров</p>
             </div>
             <div class='cooperations__cart'>
-                <img src='assets/images/section_cooperations/cut-and-sew-sample-making 1.png' alt='Пошив одежды на заказ'>
+                <img src='assets/images/section_cooperations/clothing_making.png' alt='Пошив одежды на заказ'>
                 <h3>Пошив одежды на заказ</h3>
                 <p>Пошив трикотажных изделий любой сложности и в любых объемах, как по вашим образцам, так и по нашим базовым лекалам</p>
             </div>
             <div class='cooperations__cart'>
-                <img src='assets/images/section_cooperations/sustainable-clothing-sample-production 1.png' alt='Бренд одежды под ключ'>
+                <img src='assets/images/section_cooperations/clothing_branding.png' alt='Бренд одежды под ключ'>
                 <h3>Бренд одежды под ключ</h3>
                 <p>Поможем разработать линейку одежды для вашего бренда, от пошива до реализации.</p>
             </div>
@@ -126,12 +126,12 @@
         </section>
         <section class='prints-techniques__content'>
             <div class='prints-techniques__content-cart'>
-                <img src='assets/images/section_prints-techniques/Screen-Printing-Adamley-Textiles 1.png' alt='Шелкография'>
+                <img src='assets/images/section_prints-techniques/silkscreen_printing.png' alt='Шелкография'>
                 <h3>Шелкография</h3>
                 <p>Трафаретная печать подходит для нанесения почти на любых изделиях: футболках, толстовках, свитшотах и т.д. Принты, сделанные данным способом имеют высокую износостойкость, не требуют особого ухода и прослужат довольно долго.</p>
             </div>
             <div class='prints-techniques__content-cart'>
-                <img src='assets/images/section_prints-techniques/embroidery-machine-fox-detail 1.png' alt='Вышивка на одежде'>
+                <img src='assets/images/section_prints-techniques/clothing_embroidery.png' alt='Вышивка на одежде'>
                 <h3>Вышивка на одежде</h3>
                 <p>Один из самых интересных способов нанесения изображения на одежду. Вышивка долговечна, без проблем переносит механические воздействия. Данный вид нанесения выглядит наиболее эффектно и прослужит дольше всего.</p>
             </div>
@@ -175,22 +175,22 @@
         </section>
         <section class='actual-manufacturing__content'>
             <div class='actual-manufacturing__content-cart'>
-                <img src='assets/images/section_actual-manufacturing/IMG_9324.png' alt=''>
+                <img src='assets/images/section_actual-manufacturing/manufacturing_1.png' alt=''>
             </div>
             <div class='actual-manufacturing__content-cart'>
-                <img src='assets/images/section_actual-manufacturing/IMG_9381.png' alt=''>
+                <img src='assets/images/section_actual-manufacturing/manufacturing_2.png' alt=''>
             </div>
             <div class='actual-manufacturing__content-cart'>
-                <img src='assets/images/section_actual-manufacturing/IMG_9394.png' alt=''>
+                <img src='assets/images/section_actual-manufacturing/manufacturing_3.png' alt=''>
             </div>
             <div class='actual-manufacturing__content-cart'>
-                <img src='assets/images/section_actual-manufacturing/IMG_9344.png' alt=''>
+                <img src='assets/images/section_actual-manufacturing/manufacturing_4.png' alt=''>
             </div>
             <div class='actual-manufacturing__content-cart'>
-                <img src='assets/images/section_actual-manufacturing/IMG_94281.png' alt=''>
+                <img src='assets/images/section_actual-manufacturing/manufacturing_5.png' alt=''>
             </div>
             <div class='actual-manufacturing__content-cart'>
-                <img src='assets/images/section_actual-manufacturing/IMG_93812.png' alt=''>
+                <img src='assets/images/section_actual-manufacturing/manufacturing_6.png' alt=''>
             </div>
         </section>
     </section>
@@ -219,31 +219,31 @@
         </section>
         <section class='collaborations__grid'>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/section_collaborations/1416065832_6.png' alt='Коллаборация 1'>
+                <img src='assets/images/section_collaborations/collaboration_1.png' alt='Коллаборация 1'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/section_collaborations/1416065832_5.png' alt='Коллаборация 2'>
+                <img src='assets/images/section_collaborations/collaboration_2.png' alt='Коллаборация 2'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/section_collaborations/Group_10.png' alt='Коллаборация 3'>
+                <img src='assets/images/section_collaborations/collaboration_3.png' alt='Коллаборация 3'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/section_collaborations/IMG_9232_Ed1it_2.png' alt='Коллаборация 4'>
+                <img src='assets/images/section_collaborations/collaboration_4.png' alt='Коллаборация 4'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/section_collaborations/IMG_1067_1.png' alt='Коллаборация 5'>
+                <img src='assets/images/section_collaborations/collaboration_5.png' alt='Коллаборация 5'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/section_collaborations/IMG_9170_1.png' alt='Коллаборация 6'>
+                <img src='assets/images/section_collaborations/collaboration_6.png' alt='Коллаборация 6'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/section_collaborations/football_4_1.png' alt='Коллаборация 7'>
+                <img src='assets/images/section_collaborations/collaboration_7.png' alt='Коллаборация 7'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/section_collaborations/image_17.png' alt='Коллаборация 8'>
+                <img src='assets/images/section_collaborations/collaboration_8.png' alt='Коллаборация 8'>
             </div>
             <div class='collaborations__grid-cart'>
-                <img src='assets/images/section_collaborations/danick_10_1.png' alt='Коллаборация 9'>
+                <img src='assets/images/section_collaborations/collaboration_9.png' alt='Коллаборация 9'>
             </div>
         </section>
     </section>
